fix: sidbar z-index issue

--- a/src/scss/layout/_blog-sidebar.scss
+++ b/src/scss/layout/_blog-sidebar.scss
@@ -5,7 +5,7 @@
 		left: 0px;
 		width: 425px;
 		max-height: 100%;
-		z-index: 999;
+		z-index: 9;
 		@include trans(0.4s, ease-in-out);
 	}
 	@include max(420px) {
